Added projects from Fall 2016
BlooDragu - Senior Design
Dynamic Path Following Car - Principles of Robotics
Minor UI Updates

--- a/amarbhatt.com/main/index.html
+++ b/amarbhatt.com/main/index.html
@@ -156,12 +156,24 @@
                         <h2>In My Free Time<span class="icon  fa-clock-o" style="font-size: 1em; padding-left: 10px;"></span></h2>
                         <ul id="og-grid2" class="og-grid">
 
+                            <li id = "DynPath">
+                                <a onclick="_gaq.push(['_trackEvent', 'Projects', 'Click', 'DynPathCar']);" title = "Learn More" href="" data-largesrc="images/proj/dyncar.png" data-title="Dynamic Path Following Robot" data-location='' data-description='This project explores making a wireless automatic guided robot (AVG) which does not require any kind of intrusive modifications to be made to the environment, apart from installing an overhead camera. A four wheeled differential drive robot has been controlled wirelessly to follow paths drawn on a graphical user interface within a workspace of 1.8m by 1.4m. The robot is controlled by correcting its orientation through visual feedback from a camera.</br><a href="https://github.com/AmarBhatt/DynamicPathFollowingRobot" target="_blank">View Code</a><span style="padding-left: 5px;"></span><a href="https://youtu.be/SvSE9jIfbJU" target="_blank">View Video</a><span style="padding-left: 5px;"></span><a href="https://github.com/AmarBhatt/DynamicPathFollowingRobot/blob/master/Documents/BhattKangutkar_DynamicPathFollowingRobot.pdf" target="_blank">View Paper</a>' data-date='November 2016 - December 2016 <span class="icon fa-calendar" style="font-size: 1.5em; padding-left: 5px;"></span>'>
+                                    <img src="images/proj/dyncar.png" alt="Dynamic Path Following Robot using Vision Based Control" class="image"/>
+                                </a>
+                            </li>
+
+                            <li id = "BlooDragu">
+                                <a onclick="_gaq.push(['_trackEvent', 'Projects', 'Click', 'BlooDragu']);" title = "Learn More" href="" data-largesrc="images/proj/bloodragu.png" data-title="BlōōDragü" data-location='' data-description='This project helps to mitigate the effects of mobility-limiting diseases by providing users with a robotic arm that can remove tremors from their movement. The Myo Gesture Armband is slid onto their forearm and uses EMG sensors, an accelerometer, and a gyroscope to determine their movements. Control theory is used to smooth out the actions and they are transferred to a robotic arm to perform simple tasks.</br><a href="https://github.com/AmarBhatt/BlooDragu" target="_blank">View Code</a><span style="padding-left: 5px;"></span><a href="https://www.youtube.com/watch?v=FLhZMjQ23pQ&feature=youtu.be" target="_blank">View Video</a>' data-date='January 2016 - December 2016 <span class="icon fa-calendar" style="font-size: 1.5em; padding-left: 5px;"></span>'>
+                                    <img src="images/proj/bloodragu.png" alt="BlooDragu" class="image"/>
+                                </a>
+                            </li>
+
                             <li id = "Milpet">
                                 <a onclick="_gaq.push(['_trackEvent', 'Projects', 'Click', 'Milpet']);" title = "Learn More" href="" data-largesrc="images/proj/milpet.png" 
                                 data-title="Milpet" 
                                 data-location='' 
                                 data-description='The Machine Intelligence Laboratory Personal Electronic Transporter (MILPET), is a voice-controlled autonomous wheelchair robot used as the base for several research projects including, computer vision, natural language processing, gesture recognition, localization, mapping, and obstacle avoidance. I am in charge of the control system, power system, sensor integration, all hardware, and low-level software. I also assist with integration of new features.</br><a href="https://www.rit.edu/mil" target="_blank">View Site</a>'
-                                data-date='September 2014 - Present <span class="icon fa-calendar" style="font-size: 1.5em; padding-left: 5px;"></span>'>
+                                data-date='September 2014 - May 2016 <span class="icon fa-calendar" style="font-size: 1.5em; padding-left: 5px;"></span>'>
                                     <img src="images/proj/milpet.png" alt="Milpet" class="image"/>
                                 </a>
                             </li>
@@ -411,10 +423,10 @@
                     </div>
         <!-- Footer -->
             <footer id="footer">
-                <div style="margin-left:auto; margin-right:auto">
-                <p style="">Last updated: <em>07/10/16</em></p>
+                <div style="margin-left:auto; margin-right:auto; background-color: black; display: inline-block;">
+                <p style="">Last updated: <em>12/18/2016</em></p>
                 <ul class="copyright">
-                    <li>&copy; Amar Bhatt 2015</li>
+                    <li>&copy; Amar Bhatt 2015-2017</li>
                 </ul>
                 </div>
             </footer>
