Made navbar fadein on scroll and disappear at top of page

--- a/amarbhatt.com/main/index.html
+++ b/amarbhatt.com/main/index.html
@@ -63,6 +63,7 @@
               </script>
     </head>
     <body id="top" data-spy="scroll" data-target=".navbar-fixed-top">
+
         <!-- Header -->
             <header id="header" class="container center background-circuits">
                 <div class="center">
@@ -82,6 +83,7 @@
         <!-- Main -->
             <div id="main">
                 <!-- Fixed navbar -->
+                <div id="navnavhide">
                  <nav id="theNavBar" class="navbar navbar-default navbar-fixed-top">
                       <div class="container-fluid">
                         <!-- Brand and toggle get grouped for better mobile display -->
@@ -111,7 +113,7 @@
                         </div><!-- /.navbar-collapse -->
                       </div><!-- /.container-fluid -->
                     </nav>
-                    
+                    </div>
                 <!-- Two -->
                     <section id="career" class="popup">
                         <h2>Work Across the USA<span class="icon fa-briefcase" style="font-size: 1em; padding-left: 10px;"></span></h2>
@@ -121,7 +123,7 @@
                                     <img src="images/work/strykerMako.png" alt="Stryker Mako" class="image"/>
                                 </a>
                             </li>
-                        <h1> Co-ops/Internships </h1>
+                        <h1> Co-ops/ Internships </h1>
                             <li id = "StrykerMako">
                                 <a onclick="_gaq.push(['_trackEvent', 'Work', 'Click', 'StrykerMako']);" title = "Learn More" href="" data-largesrc="images/work/strykerMako.png" data-title="Computer Engineering Intern" data-location='<span class="icon fa-map-marker" style="font-size: 1.5em; padding-right: 5px;"></span> Davie, FL</br>' data-description="I worked as an Electrical/Software engineering intern on the R&D MAKO Platform Team. Our goal was to develop the next generation of surgical robots. My project included the use of MATLAB, image processing, computer vision, microprocessors, optics, and hardware design." data-date='May 2016 - August 2016 <span class="icon fa-calendar" style="font-size: 1.5em; padding-left: 5px;"></span>'>
                                     <img src="images/work/strykerMako.png" alt="Stryker Mako" class="image"/>
