Added new project and job description

--- a/amarbhatt.com/main/index.html
+++ b/amarbhatt.com/main/index.html
@@ -119,7 +119,7 @@
                         <h2>Work Across the USA<span class="icon fa-briefcase" style="font-size: 1em; padding-left: 10px;"></span></h2>
                         <ul id="og-grid" class="og-grid">
                             <li id = "StrykerMakoCurrent">
-                                <a onclick="_gaq.push(['_trackEvent', 'Work', 'Click', 'StrykerMakoCurrent']);" title = "Learn More" href="" data-largesrc="images/work/strykerMako.png" data-title="Embedded Software Engineer" data-location='<span class="icon fa-map-marker" style="font-size: 1.5em; padding-right: 5px;"></span> Davie, FL</br>' data-description="I work as an Embedded Software Engineer in R&D and production. Our goal is to develop the next generation of surgical robots." data-date='August 2017 - Present <span class="icon fa-calendar" style="font-size: 1.5em; padding-left: 5px;"></span>'>
+                                <a onclick="_gaq.push(['_trackEvent', 'Work', 'Click', 'StrykerMakoCurrent']);" title = "Learn More" href="" data-largesrc="images/work/strykerMako.png" data-title="Embedded Software Engineer" data-location='<span class="icon fa-map-marker" style="font-size: 1.5em; padding-right: 5px;"></span> Davie, FL</br>' data-description="I work as an Embedded Software Engineer in R&D. My role responsibility is in the realm of emdedded development and controls. Our goal is to develop the next generation of surgical robots." data-date='August 2017 - Present <span class="icon fa-calendar" style="font-size: 1.5em; padding-left: 5px;"></span>'>
                                     <img src="images/work/strykerMako.png" alt="Stryker Mako" class="image"/>
                                 </a>
                             </li>
@@ -191,6 +191,13 @@
                     <section id="projects" class="popup">
                         <h2>In My Free Time<span class="icon  fa-clock-o" style="font-size: 1em; padding-left: 10px;"></span></h2>
                         <ul id="og-grid2" class="og-grid">
+
+                            
+                            <li id = "RoomMon">
+                                <a onclick="_gaq.push(['_trackEvent', 'Projects', 'Click', 'RoomMon']);" title = "Learn More" href="" data-largesrc="images/proj/room_mon.png" data-title="Temperature Clock Device" data-location='' data-description='This project explores using an Arduino, several sensors, and a custom PCB design to create an interactive room device for temperature sensing, date/time view, and ambient light.</br><a href="https://github.com/AmarBhatt/TemperatureClockDevice" target="_blank">View Code</a><span style="padding-left: 5px;"></span><a href="https://youtu.be/G7B3r30zJJI" target="_blank">View Video</a>' data-date='October 2017 – January 2018 <span class="icon fa-calendar" style="font-size: 1.5em; padding-left: 5px;"></span>'>
+                                    <img src="images/proj/room_mon.png" alt="Temperature Clock Device" class="image" />
+                                </a>
+                            </li>
 
                             <li id = "DynPath">
                                 <a onclick="_gaq.push(['_trackEvent', 'Projects', 'Click', 'DynPathCar']);" title = "Learn More" href="" data-largesrc="images/proj/dyncar.png" data-title="Dynamic Path Following Robot" data-location='' data-description='This project explores making a wireless automatic guided robot (AVG) which does not require any kind of intrusive modifications to be made to the environment, apart from installing an overhead camera. A four-wheeled differential drive robot has been controlled wirelessly to follow paths drawn on a graphical user interface within a workspace of 1.8m by 1.4m. The robot is controlled by correcting its orientation through visual feedback from a camera.</br><a href="https://github.com/AmarBhatt/DynamicPathFollowingRobot" target="_blank">View Code</a><span style="padding-left: 5px;"></span><a href="https://youtu.be/SvSE9jIfbJU" target="_blank">View Video</a><span style="padding-left: 5px;"></span><a href="https://github.com/AmarBhatt/DynamicPathFollowingRobot/blob/master/Documents/BhattKangutkar_DynamicPathFollowingRobot.pdf" target="_blank">View Paper</a>' data-date='November 2016 – December 2016 <span class="icon fa-calendar" style="font-size: 1.5em; padding-left: 5px;"></span>'>
@@ -390,9 +397,9 @@
         <!-- Footer -->
             <footer id="footer">
                 <div style="margin-left:auto; margin-right:auto; background-color: black; display: inline-block;">
-                <p style="">Last updated: <em>07/21/2017</em></p>
+                <p style="">Last updated: <em>01/06/2018</em></p>
                 <ul class="copyright">
-                    <li>&copy; Amar Bhatt 2015-2017</li>
+                    <li>&copy; Amar Bhatt 2015-2018</li>
                 </ul>
                 </div>
             </footer>
